# Job-apply-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOVER_PLAN.md  README.md  alembic.ini  check_db.py  check_jobs.py  docker-compose.yml  pyproject.toml  reset_db.py  retrigger_urls.py  user_profile.yaml
.claude/: settings.local.json
api/: main.py
api/routes/: applications.py  dashboard.py  feedback.py  jobs.py  webhook.py
api/templates/: index.html
bridge/: .env.example  .gitignore  package-lock.json  package.json  whatsapp_bridge.js
core/: config.py  logging.py  utils.py
db/: models.py  session.py
ingestion/: url_utils.py  whatsapp_webhook.py
jobs/: extractor.py  fetcher.py  models.py
jobs/parsers/: comeet.py  (+7 more)
llm/: client.py  generation.py  prompts.py  vision.py
match/: scoring.py
migrations/: env.py
monitoring/: prometheus.yml
nginx/: nginx.conf
profile/: loader.py  models.py  pdf_loader.py
submitters/: ashby.py  base.py  browser_fallback.py  comeet.py  greenhouse.py  icims.py  indeed.py  jobvite.py  lever.py  linkedin.py  smartrecruiters.py  workable.py  workday.py
tests/: conftest.py  test_adversarial.py  test_auto_apply_urls.py  test_dashboard_summary.py  test_fetcher_security.py  test_interview_prep.py  test_job_parsing.py  test_jobs_apply_now.py  test_llm_validation.py  test_runtime_config.py  test_scoring.py  test_security_runtime.py  test_submissions_queue.py  test_submitter_browser_fallback.py  test_submitter_tier1_browser_fallback.py  test_url_extraction.py  test_whatsapp_metrics.py
worker/: celery_app.py  tasks.py
(+4 files in other folders)
