[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "job-apply-agent"
version = "0.1.0"
description = "AI Job Apply Agent — monitor WhatsApp for job links, extract postings, and draft/submit applications"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ali Hamed"}]

dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "httpx>=0.26,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
    "celery>=5.3,<6",
    "redis>=5.0,<6",
    "openai>=1.10,<2",
    "anthropic>=0.18,<1",
    "python-multipart>=0.0.6",
    "structlog>=24.1,<25",
    "pyyaml>=6.0,<7",
    "jinja2>=3.1,<4",
    "tenacity>=8.2,<9",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "httpx",           # for TestClient
    "ruff>=0.2,<1",
    "mypy>=1.8,<2",
]
browser = [
    "playwright>=1.41,<2",
]

[tool.setuptools.packages.find]
include = [
    "api*", "core*", "db*", "ingestion*", "jobs*",
    "llm*", "match*", "profile*", "submitters*", "worker*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
